kuber/lesson-12/dp-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp-prod
  labels:
    app: kuber-dp-prod
spec:
  replicas: 3
  minReadySeconds: 5
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: kuber-app-v1-0
          image: skhandorin/hw2:v1.0
          imagePullPolicy: IfNotPresent
#      restartPolicy: Always
