kuber/lesson-12/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-dev
spec:
  selector:
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
