kuber/lesson-12/svc_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-svc
spec:
  selector:
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
