kuber/lesson-12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kuber-service-dev
                port:
                  number: 80
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: kuber-service-prod
                port:
                  number: 80
